# VeritasChain

./: Main.py  README.md  blockchain_analyzer.py  pyproject.toml  veritas_agent.py  web_scraper.py
git/: index
git/logs/: HEAD
git/logs/refs/heads/: replit-agent
git/refs/heads/: main  replit-agent
