[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio>=4.0.0",
    "openai>=1.108.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "trafilatura>=2.0.0",
    "web3>=7.13.0",
]
